# knowledge-assistant-pydanticai-prototype

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CI_CD_SETUP.md  CLAUDE.md  Makefile  PRE_COMMIT_SETUP.md  README.md  TODO.md  acceptance_tests.py  docker-compose.yml
.claude/: CLAUDE.md
.cursor/rules/: data-pipeline.mdc  docs-maintenance.mdc  no-all-exports.mdc
.github/: README.md  dependabot.yml
.github/workflows/: backend.yml  ci.yml  data-analysis.yml  data-pipeline.yml  frontend.yml
assignment/: assignment.md  tests.md
backend/: README.md  agent.py  config.py  main.py  models.py  pyproject.toml  pytest.ini
backend/services/: chat_history_service.py  retrieval_service.py  sql_service.py
backend/tests/: conftest.py  test_agent.py  test_api.py  test_chat_use_case.py  test_retrieval_service.py  test_sql_service.py
backend/use_cases/: __init__.py  chat.py  exceptions.py
data_analysis/: README.md  analyze.py  pyproject.toml
data_analysis/outputs/: data_quality.md  document_metadata.md  kpi_analysis.md  overview.md  policy_compliance.md  team_analysis.md
data_pipeline/: .dockerignore  .env.example  README.md  config.py  main.py  pyproject.toml
data_pipeline/database/: __init__.py  models.py
data_pipeline/processors/: __init__.py  embedding_processor.py
data_pipeline/tests/: README.md  __init__.py  conftest.py  test_relational_store.py  test_structured_processor.py  test_vector_store.py
data_pipeline/utils/: __init__.py  markdown_utils.py
docs/: ai-context-setup.md  architecture.md  design_document.md  presentation.html  presentation.md
docs/architecture/: backend.md  data_pipeline.md
frontend/: .eslintrc.json  README.md  eslint.config.js  package-lock.json  package.json
scripts/: seed_demo.py
src/backend/: .dockerignore  .env.example  .gitignore  Dockerfile  agent.py  auth.py  config.py  logging_config.py  main.py  models.py  pyproject.toml  pytest.ini  telemetry.py
src/backend/application/: __init__.py  exceptions.py
src/backend/application/infrastructure/: __init__.py  agent.py  telemetry.py
src/backend/application/use_cases/: chat.py
src/backend/domain/: __init__.py  models.py  protocols.py
src/backend/domain/infrastructure/: __init__.py  chat_history_service.py  retrieval_service.py
src/backend/presentation/: __init__.py  schemas.py
src/backend/presentation/infrastructure/: __init__.py  auth.py
src/backend/presentation/routes/: auth.py  chat.py
src/backend/services/: chat_history_service.py  sql_service.py
src/backend/use_cases/: __init__.py  chat.py
src/data_pipeline/: .gitignore  Dockerfile  README.md  config.py  main.py  pytest.ini
src/data_pipeline/database/: __init__.py  interfaces.py  relational_store.py  vector_store.py
src/data_pipeline/processors/: __init__.py  document_processor.py  structured_processor.py
src/data_pipeline/services/: __init__.py  embedding_service.py
src/data_pipeline/utils/: text_utils.py
src/frontend/: Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
src/frontend/src/: App.tsx  api.ts  auth.ts  logger.ts  types.ts
src/frontend/src/components/: ChatInput.tsx  MessageBubble.tsx  MessageList.tsx  Sidebar.tsx  SourcesBadge.tsx
src/frontend/src/pages/: Chat.tsx  Login.tsx
src/frontend/src/test/: App.test.tsx  ChatInput.test.tsx  Login.test.tsx  MessageBubble.test.tsx  MessageList.test.tsx  Sidebar.test.tsx  SourcesBadge.test.tsx  api.test.ts  auth.test.ts  helpers.tsx  setup.ts
src/shared/: __init__.py
src/shared/protocols/: __init__.py  embedding.py  retrieval.py  sql.py
tests/backend/: conftest.py  test_acceptance.py  test_agent.py  test_api.py  test_chat_history_service.py  test_chat_use_case.py  test_retrieval_service.py  test_sql_service.py
tests/data_pipeline/: conftest.py  test_document_processor.py  test_embedding_service.py
